--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
 name=Watchy
-version=1.0.0
+version=1.1.0
 author=SQFMI
 maintainer=SQFMI
 sentence=Watchy - An Open Source E-Ink SmartWatch by SQFMI
-paragraph=This library contains code samples for Watchy
+paragraph=This library contains drivers and code samples for Watchy
 category=Other
 url=https://github.com/sqfmi/Watchy
