updated to use GxEDP2

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Watchy
-version=1.1.3
+version=1.1.4
 author=SQFMI
 maintainer=SQFMI
 sentence=Watchy - An Open Source E-Ink SmartWatch by SQFMI
 paragraph=This library contains drivers and code samples for Watchy
 category=Other
 url=https://github.com/sqfmi/Watchy
-depends=GxEPD
+depends=GxEPD2,DS3232RTC
