--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=Watchy
-version=1.1.6
+version=1.1.7
 author=SQFMI
 maintainer=SQFMI
-sentence=Watchy - An Open Source E-Ink SmartWatch by SQFMI
+sentence=Watchy - An Open Source E-Paper Watch by SQFMI
 paragraph=This library contains drivers and code samples for Watchy
 category=Other
-url=https://github.com/sqfmi/Watchy
-depends=GxEPD2,DS3232RTC
+url=https://watchy.sqfmi.com
+architectures=esp32
+depends=Adafruit GFX Library,Arduino_JSON,DS3232RTC,GxEPD2,WiFiManager
