--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Watchy
-version=1.2.7
+version=1.2.8
 author=SQFMI
 maintainer=SQFMI
 sentence=Watchy - An Open Source E-Paper Watch by SQFMI
@@ -7,4 +7,4 @@ paragraph=This library contains drivers and code samples for Watchy
 category=Other
 url=https://watchy.sqfmi.com
 architectures=esp32
-depends=Adafruit GFX Library,Arduino_JSON,DS3232RTC,GxEPD2,WiFiManager
+depends=Adafruit GFX Library,Arduino_JSON,DS3232RTC,Rtc_Pcf8563,GxEPD2,WiFiManager
