Add NTPClient dependency

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library contains drivers and code samples for Watchy
 category=Other
 url=https://watchy.sqfmi.com
 architectures=esp32
-depends=Adafruit GFX Library,Arduino_JSON,DS3232RTC,Rtc_Pcf8563,GxEPD2,WiFiManager
+depends=Adafruit GFX Library,Arduino_JSON,DS3232RTC,NTPClient,Rtc_Pcf8563,GxEPD2,WiFiManager
