Trying to fork harder.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Watchy
-version=1.4.0
-author=SQFMI
-maintainer=SQFMI
+name=WatchyExpanded
+version=2022.4.10
+author=Michael-Paul Moore
+maintainer=MichaelPaul Moore
 sentence=Watchy - An Open Source E-Paper Watch by SQFMI
-paragraph=This library contains drivers and code samples for Watchy
+paragraph=This library contains drivers for WatchyExpanded
 category=Other
 url=https://watchy.sqfmi.com
 architectures=esp32
