--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=Watchy
-version=1.4.0
+version=1.4.0-dev
 author=SQFMI
 maintainer=SQFMI
 sentence=Watchy - An Open Source E-Paper Watch by SQFMI
