--- a/.github/workflows/test-compilation.yml
+++ b/.github/workflows/test-compilation.yml
@@ -15,4 +15,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: binaries
-        path: $GITHUB_WORKSPACE/examples/WatchFaces/**/build/*.bin
+        path: ${{ github.workspace }}/examples/WatchFaces/**/build/*.bin
