--- a/.github/workflows/dev.actions.yml
+++ b/.github/workflows/dev.actions.yml
@@ -1,6 +1,11 @@
 name: Build Example Watchfaces
-on: [push, pull_request]
-branches: dev
+on:
+  push:
+    branches:
+      - "dev"
+  pull_request:
+    branches:
+      - "dev"
 jobs:
   build:
     name: Build Example Watchfaces
