--- a/7_SEG/settings.h.example
+++ b/7_SEG/settings.h.example
@@ -14,13 +14,16 @@
     #define OPENWEATHERMAP_URL "http://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&lang={lang}&units={units}&appid={apiKey}" //open weather api using lat lon
 #endif
 
-#define OPENWEATHERMAP_APIKEY "f058fe1cad2afe8e2ddc5d063a64cecb" //use your own API key :)
+#define OPENWEATHERMAP_APIKEY "test" //use your own API key :)
 #define TEMP_UNIT "metric" //metric = Celsius , imperial = Fahrenheit
-#define TEMP_LANG "en"
+#define TEMP_LANG "fr"
 #define WEATHER_UPDATE_INTERVAL 30 //must be greater than 5, measured in minutes
 //NTP Settings
 #define NTP_SERVER "pool.ntp.org"
-#define GMT_OFFSET_SEC 3600 * -5 //New York is UTC -5 EST, -4 EDT, will be overwritten by weather data
+#define GMT_OFFSET_SEC 3600 * 2 //New York is UTC -5 EST, -4 EDT, will be overwritten by weather data
+// WIFI Settings
+#define WIFI_SSID "Pastabox-toto"
+#define WIFI_PASS "test"
 
 watchySettings settings{
     #ifdef CITY_ID
@@ -37,6 +40,8 @@ watchySettings settings{
     .weatherUpdateInterval = WEATHER_UPDATE_INTERVAL,
     .ntpServer = NTP_SERVER,
     .gmtOffset = GMT_OFFSET_SEC,
+    .wifiSSID = WIFI_SSID,
+    .wifiPass = WIFI_PASS,
     .vibrateOClock = true,
 };
 
