--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         arduino-board-fqbn: esp32:esp32:watchy:Revision=v20,PartitionScheme=min_spiffs,UploadSpeed=921600,DebugLevel=none,EraseFlash=none
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-        required-libraries: Adafruit GFX Library,Arduino_JSON,DS3232RTC,NTPClient,Rtc_Pcf8563,GxEPD2,WiFiManager
+        required-libraries: Adafruit GFX Library,Arduino_JSON,ArduinoJson,DS3232RTC,NTPClient,Rtc_Pcf8563,GxEPD2,WiFiManager
         sketch-names-find-start: "${{ env.IMAGE_NAME }}/"
         sketch-names: "${{ env.IMAGE_NAME }}.ino"
