--- a/platformio.ini
+++ b/platformio.ini
@@ -18,9 +18,11 @@ build_flags =  -DCDC_ENABLED -DJTAG_ENABLED -DMSC_ENABLED
 ;upload_flags = --erase-all
 ;upload speed:
 upload_speed = 115200
+;build mode debug
+build_type = debug
 ;upload port (put yours here):
-upload_port = COM7
-monitor_port = COM7
+;upload_port = COM7                     ;for windows
+;monitor_port = COM7                    ;for windows
 ;upload_port = /dev/ttyACM0             ;for linux
 ;monitor_port = /dev/ttyACM0            ;for linux
 ;upload_port = /dev/cu.usbserial-0001   ;for mac
