Error in compilation

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,7 @@ lib_deps =
 ; This is for v3
 extends = env:base
 board = esp32-s3-devkitc-1
-build_flags = -DARDUINO_ESP32S3_DEV
+build_flags = -DARDUINO_ESP32S3_DEV -Wunused-variable
 
 [env:v2_0]
 ; This is for v3
